--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 *.app
 CFB_Cursos/QT/sinais_slots(evento_e_acoes)/sinais_slots/
 CFB_Cursos/QT/formularios/objeto_global/fomulario/
+CFB_Cursos/QT/variaveis/variaveis/
