--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 CFB_Cursos/QT/sinais_slots(evento_e_acoes)/sinais_slots/
 CFB_Cursos/QT/formularios/objeto_global/fomulario/
 CFB_Cursos/QT/variaveis/variaveis/
+CFB_Cursos/QT/imagens/usando_codigo/usando_codigo/
