--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ CFB_Cursos/QT/formularios/objeto_global/fomulario/
 CFB_Cursos/QT/variaveis/variaveis/
 CFB_Cursos/QT/imagens/usando_codigo/usando_codigo/
 CFB_Cursos/QT/imc/imc/
+CFB_Cursos/QT/projetos/imc/imc/
