--- a/CFB_Cursos/QT/projetos/bloco_de_notas/build-bloco_de_notas-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/Makefile
+++ b/CFB_Cursos/QT/projetos/bloco_de_notas/build-bloco_de_notas-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/Makefile
@@ -170,6 +170,7 @@ Makefile: ../bloco_de_notas/bloco_de_notas.pro C:/Qt/6.1.2/mingw81_64/mkspecs/wi
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/qt_config.prf \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/toolchain.prf \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/default_pre.prf \
@@ -195,11 +196,11 @@ Makefile: ../bloco_de_notas/bloco_de_notas.pro C:/Qt/6.1.2/mingw81_64/mkspecs/wi
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/yacc.prf \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/lex.prf \
 		../bloco_de_notas/bloco_de_notas.pro \
+		C:/Qt/6.1.2/mingw81_64/lib/Qt6PrintSupport.prl \
 		C:/Qt/6.1.2/mingw81_64/lib/Qt6Widgets.prl \
 		C:/Qt/6.1.2/mingw81_64/lib/Qt6Gui.prl \
 		C:/Qt/6.1.2/mingw81_64/lib/Qt6Core.prl \
 		C:/Qt/6.1.2/mingw81_64/lib/Qt6EntryPoint.prl \
-		.qmake.stash \
 		C:/Qt/6.1.2/mingw81_64/mkspecs/features/build_pass.prf \
 		../arquivos/arquivos.qrc
 	$(QMAKE) -o Makefile ..\bloco_de_notas\bloco_de_notas.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
@@ -303,6 +304,7 @@ C:/Qt/6.1.2/mingw81_64/mkspecs/features/qt_functions.prf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/qt_config.prf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/win32-g++/qmake.conf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/exclusive_builds.prf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/toolchain.prf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/default_pre.prf:
@@ -328,11 +330,11 @@ C:/Qt/6.1.2/mingw81_64/mkspecs/features/exceptions.prf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/yacc.prf:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/lex.prf:
 ../bloco_de_notas/bloco_de_notas.pro:
+C:/Qt/6.1.2/mingw81_64/lib/Qt6PrintSupport.prl:
 C:/Qt/6.1.2/mingw81_64/lib/Qt6Widgets.prl:
 C:/Qt/6.1.2/mingw81_64/lib/Qt6Gui.prl:
 C:/Qt/6.1.2/mingw81_64/lib/Qt6Core.prl:
 C:/Qt/6.1.2/mingw81_64/lib/Qt6EntryPoint.prl:
-.qmake.stash:
 C:/Qt/6.1.2/mingw81_64/mkspecs/features/build_pass.prf:
 ../arquivos/arquivos.qrc:
 qmake: FORCE
